fix forms on mobile

--- a/static/css/mise.css
+++ b/static/css/mise.css
@@ -269,8 +269,8 @@ a.text-primary:active {
     text-align: center;
     vertical-align: middle;
     position: absolute;
-    top: 4px;
-    right: 4px;
+    top: 10%;
+    right: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -743,8 +743,8 @@ button[class^="carousel-control-"]:focus {
     }
 
     #cart-counter {
-        top: 3px;
-        right: 7px;
+        top: 9%;
+        right: 18%;
     }
 }
 
@@ -760,6 +760,8 @@ button[class^="carousel-control-"]:focus {
     .w-md-50 {
         max-width: 50%;
     }
+
+    
 }
 
 @media (max-width: 768px) {
@@ -769,6 +771,10 @@ button[class^="carousel-control-"]:focus {
 
     .pill-bmd {
         border-radius: 100vw !important;
+    }
+
+    .mb-md-3 {
+        margin-bottom: 1rem !important;
     }
 
 }
